--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -23,10 +23,6 @@ body {
 	width: 100%;
 }
 
-.one {
-	height: 100vh;
-}
-
 
 nav {
     background-color: $second;
@@ -88,3 +84,63 @@ nav {
 .transform-class {
     transform: translateY(0%);
 }
+
+
+.shows-wrapper {
+    display: flex;
+
+    padding: 10em 1em 0 1em;
+    width: 100%;
+    height: 100%;
+    flex-wrap: wrap;
+}
+
+
+.card {
+    position: relative;
+    // height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    // height: 450px;
+    width: 270px;
+    margin: 1em;
+    background-color: $second;
+    border: 2px solid $second;
+    transition: all 0.3s;
+    border-radius: 5px;
+    border: 2px solid $third;
+    overflow: hidden;
+    
+    &:hover {
+        box-shadow: 4px 4px 10px $second;
+        transform: scale(1.005);
+    }
+    
+    .card-img {
+        width: 100%;
+        height: 250px;
+        object-fit: cover;
+    }
+
+    
+    .card-text {
+        height: 100%;
+        padding: 1em;
+        color: $one;
+        .card-title {
+            font-size: 2.5rem;
+            font-weight: 500;
+        }
+        p {
+            font-size: 1.6rem;
+        }    
+    }
+
+    .card-btn {
+        align-self: flex-end;
+        margin-right: 1em;
+        justify-self: flex-end;
+    }
+}
+
