--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -1,5 +1,5 @@
-$one: #EAE2B7;
-$second: #003049;
-$third: #FCBF49;
-$fourth: #F77F00;
-$fifth: #D62828;
+$one: #FFFFFF;
+$second: #353535;
+$third: #284B63;
+$fourth: #D9D9D9;
+$fifth: #3C6E71;
