--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -31,8 +31,10 @@ nav {
 }
 
 .box {
-	background-color: $fifth;
 	position: relative;
+	display: flex;
+	justify-content: space-between;
+	background-color: $fifth;
 }
 
 .drop-btn {
@@ -52,6 +54,42 @@ nav {
 		border: 2px solid $third;
 	}
 }
+
+.search-box {
+	margin-right: 1em;
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	.search-input {
+		height: 100%;
+		padding: 1em;
+		width: 200px;
+		background-color: #eee;
+		border: none;
+		font-size: 1.6rem;
+	}
+	.search-btn {
+		height: 100%;
+		width: 60px;
+		border: none;
+		background-color: $third;
+		font-size: 2rem;
+		cursor: pointer;
+	}
+	.search-input:focus,
+	.search-btn:focus {
+		outline: none;
+	}
+	.search-btn:focus {
+		background-color: #213f53;
+	}
+	.search-input:focus {
+		background-color: #dbdde4;
+	}
+}
+
 
 .dropdown-menu {
 	position: absolute;
@@ -102,8 +140,7 @@ nav {
 		width: 100%;
 		height: 100%;
 		display: flex;
-		align-items: center;
-		justify-content: center;
+		align-items: flex-start;
 		box-shadow: none;
 		margin: 0;
 		border: none;
@@ -113,6 +150,14 @@ nav {
 			transform: none;
 		}
 
+		.info-div {
+			font-size: 1.6rem;
+			font-weight: 500;
+			align-self: flex-start;
+			.info {
+				padding: 0.1em 0.5em;
+			}
+		}
 	}
 }
 
@@ -125,11 +170,9 @@ nav {
 
 .card {
 	position: relative;
-	// height: 100%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	// height: 450px;
 	width: 270px;
 	margin: 1em;
 	background-color: $one;
